# block-flow

./: .gitignore  Cargo.toml  EMPTY_COMMIT  REVERT_COMMIT_ANALYSIS.md  build_rs_cov.profraw  ci.sh  coverage.sh  install-coverage.sh
.github/workflows/: ci.yml  rust-ci.yml  test.yml  workspace-tests.yml
actor/src/: actor.rs  controller.rs  lib.rs
block-macros/: Cargo.toml
block-macros-test/: Cargo.toml
block-macros-test/src/: execute.rs  lib.rs
block-macros/src/: block.rs  block_spec.rs  contract_deps.rs  execute.rs  init_params.rs  input.rs  lib.rs  make_defaults.rs  output.rs
block-serialization/: Cargo.toml
block-serialization/src/: lib.rs
block-traits/: Cargo.toml
block-traits/coverage/: 85720-16763347283538369025_0.profraw
block-traits/src/: associated_types.rs  block_spec.rs  block_weave.rs  lib.rs  serialization.rs  type_erasure.rs
block_traits/: Cargo.toml
block_traits/src/: block_serialization.rs  lib.rs  serialization.rs
blocks/: Cargo.toml
blocks/src/: after.rs  block_io.rs  delete.rs  lib.rs  simple_order.rs  sniper.rs
channels/src/: channel_keys.rs  errors.rs  lib.rs  registry.rs
coverage/: baseline.txt  cobertura.xml  lcov.info
coverage/html/: index.html
coverage/html/coverage/Users/mailund/Code/block-flow/actor/src/: lib.rs.html
coverage/html/coverage/Users/mailund/Code/block-flow/block-macros-test/src/: execute.rs.html  init_params.rs.html
coverage/html/coverage/Users/mailund/Code/block-flow/block-macros/src/: block.rs.html  contract_deps.rs.html  execute.rs.html  init_params.rs.html  input.rs.html  lib.rs.html  make_defaults.rs.html  output.rs.html
coverage/html/coverage/Users/mailund/Code/block-flow/block-traits/src/: associated_types.rs.html  block_spec.rs.html  block_weave.rs.html  lib.rs.html  type_erasure.rs.html
coverage/html/coverage/Users/mailund/Code/block-flow/blocks/src/: after.rs.html  delete.rs.html  lib.rs.html  simple_order.rs.html
coverage/html/coverage/Users/mailund/Code/block-flow/channels/src/: errors.rs.html  lib.rs.html  registry.rs.html
coverage/html/coverage/Users/mailund/Code/block-flow/crates/actor/src/: actor.rs.html  actor_execution_context.rs.html  controller.rs.html
coverage/html/coverage/Users/mailund/Code/block-flow/crates/block-macros/src/: block.rs.html  contract_deps.rs.html  execute.rs.html  input.rs.html  lib.rs.html  (+2 more)
coverage/html/coverage/Users/mailund/Code/block-flow/execution-plan/src/: lib.rs.html
coverage/html/coverage/Users/mailund/Code/block-flow/intents/src/: block_intents.rs.html  intents.rs.html  lib.rs.html  slots.rs.html
coverage/html/coverage/Users/mailund/Code/block-flow/serialization-macros/src/: lib.rs.html
coverage/html/coverage/Users/mailund/Code/block-flow/serialization/src/: error.rs.html  serializer.rs.html  structs.rs.html
coverage/html/coverage/Users/mailund/Code/block-flow/trade-types/src/: lib.rs.html
coverage/html/coverage/Users/mailund/Code/block-flow/weave-test/src/: lib.rs.html
coverage/html/coverage/Users/mailund/Code/block-flow/weave-traits/src/: lib.rs.html
coverage/html/coverage/Users/mailund/Code/block-flow/weave/src/: lib.rs.html  weave.rs.html
crates/actor/: Cargo.toml
crates/actor/src/: actor.rs  actor_execution_context.rs  controller.rs  lib.rs  orders.rs
crates/block-macros/coverage/: 85719-13392699343240334336_0.profraw
crates/block-macros/src/: block.rs  execute.rs  input.rs  lib.rs  output.rs
crates/block-traits/: Cargo.toml
crates/block-traits/src/: associated_types.rs  block.rs  block_spec.rs  block_trait.rs  block_weave.rs  effects.rs  execute_trait.rs  execution_context.rs  execution_plan.rs  lib.rs  type_erasure.rs
crates/block-traits/src/block_weave/: embed.rs  mod.rs  package.rs  type_erasure.rs  wrap.rs
crates/block-traits/src/execution_context/: exe_ctx.rs  mod.rs  order_book.rs
crates/block-traits/src/intents/: block_intents.rs  intent_types.rs  mod.rs  slots.rs
crates/blocks/: Cargo.toml
crates/blocks/coverage/: 85721-11729555279986180322_0.profraw
crates/blocks/src/: after.rs  block_io.rs  delete.rs  lib.rs  simple_order.rs  sniper.rs
crates/channels/: Cargo.toml
crates/channels/coverage/: 85722-15694120302946399196_0.profraw
crates/channels/src/: channel_keys.rs  lib.rs
crates/channels/src/weave/: mod.rs  node_weaving.rs
crates/execution-context/src/: lib.rs
crates/execution-plan/: Cargo.toml
crates/execution-plan/src/: lib.rs
crates/intents/: Cargo.toml
crates/intents/coverage/: 85725-8322553185947131664_0.profraw
crates/serialization-macros/: Cargo.toml
crates/serialization-macros/src/: lib.rs
crates/serialization/src/: error.rs  lib.rs  serializer.rs  structs.rs
crates/trade-types/coverage/: 85730-11023866484997919834_0.profraw
crates/trade-types/src/: contract.rs  lib.rs  price.rs  quantity.rs
crates/weave/: Cargo.toml
crates/weave/src/: lib.rs  node_weaving.rs  weave.rs
example-block/: Cargo.toml
example-block/src/: lib.rs
execution-context/: Cargo.toml
execution-context/src/: lib.rs
execution-plan/: Cargo.toml
execution-plan/coverage/: 85724-8115406606370275324_0.profraw
execution-plan/src/: lib.rs
intents/: Cargo.toml
intents/src/: block_intents.rs  intents.rs  lib.rs  slots.rs
registry/: Cargo.toml
registry/src/: lib.rs
serialization/: Cargo.toml
serialization-macros/: Cargo.toml
serialization-macros/coverage/: 85729-11877777134814716866_0.profraw
serialization-macros/src/: lib.rs
serialization/coverage/: 85728-13356706933598907030_0.profraw
serialization/src/: error.rs  keys.rs  lib.rs  structs.rs
src/: lib.rs
test-crates/block-macros-test/: Cargo.toml
test-crates/block-macros-test/src/: execute.rs  init_params.rs  lib.rs
test-crates/weave-test/: Cargo.toml
test-crates/weave-test/src/: lib.rs
trade-types/: Cargo.toml
trade-types/src/: contract.rs  lib.rs  price.rs
weave/: Cargo.toml
weave-test/: Cargo.toml
weave-test/src/: lib.rs
weave-traits/: Cargo.toml
weave-traits/src/: lib.rs
weave/coverage/: 85733-13092554634276216702_0.profraw  85735-18405328161210790539_0.profraw
weave/src/: lib.rs
(+40 files in other folders)
