[workspace]
members = [
    "block-macros", 
    "block-traits",
    "blocks", 
    "channels", 
    "execution-plan",
    "intents",
    "serialization-macros",
    "serialization",
    "trade-types",
    "weave",
]

[package]
name = "block-flow"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
block-traits = { path = "block-traits" }
block-macros = { path = "block-macros" }
blocks = { path = "blocks" }
channels = { path = "channels" }
execution-plan = { path = "execution-plan" }
intents = { path = "intents" }
serialization = { path = "serialization" }
serialization-macros = { path = "serialization-macros" }
trade-types = { path = "trade-types" }

[dev-dependencies]
