[workspace]
members = [
    "actor",
    "block-macros", 
    "block-macros-test",
    "block-traits",
    "blocks", 
    "channels", 
    "execution-plan",
    "intents",
    "serialization-macros",
    "serialization",
    "trade-types",
    "weave",
    "weave-test",
]

[package]
name = "block-flow"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actor = { path = "actor" }
block-traits = { path = "block-traits" }
block-macros = { path = "block-macros" }
blocks = { path = "blocks" }
channels = { path = "channels" }
execution-context = { path = "execution-context" }
execution-plan = { path = "execution-plan" }
intents = { path = "intents" }
serialization = { path = "serialization" }
serialization-macros = { path = "serialization-macros" }
trade-types = { path = "trade-types" }
weave = { path = "weave" }

[dev-dependencies]
block-macros-test = { path = "block-macros-test" }
