[workspace]
members = [
    "crates/*",
    "test-crates/*",
]

[package]
name = "block-flow"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actor = { path = "crates/actor" }
block-traits = { path = "crates/block-traits" }
block-macros = { path = "crates/block-macros" }
blocks = { path = "crates/blocks" }
channels = { path = "crates/channels" }
serialization = { path = "crates/serialization" }
serialization-macros = { path = "crates/serialization-macros" }
trade-types = { path = "crates/trade-types" }

[dev-dependencies]
block-macros-test = { path = "test-crates/block-macros-test" }
weave-test = { path = "test-crates/weave-test" }
