[package]
name = "block-macros-test"
version = "0.1.0"
edition = "2021"

[dependencies]
block-macros = { path = "../block-macros" }


[dev-dependencies]
block-traits = { path = "../block-traits" }
channels = { path = "../channels" }
intents = { path = "../intents" }
serialization = { path = "../serialization" }
serialization-macros = { path = "../serialization-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# prost = "0.12"  # For protobuf when needed
trade-types = { path = "../trade-types" }