[package]
name = "block-serialization"
version = "0.1.0"
edition = "2021"

[dependencies]
channels = { path = "../channels" }
block_traits = { path = "../block_traits" }
serialization = { path = "../serialization" }
serialization-macros = { path = "../serialization-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# prost = "0.12"  # For protobuf when needed
