[package]
name = "block-traits"
version = "0.1.0"
edition = "2021"

[dependencies]
channels = { path = "../channels" }
serde = { version = "1.0", features = ["derive"] }
serialization = { path = "../serialization" }
serialization-macros = { path = "../serialization-macros" }
intents = { path = "../intents" }

[dev-dependencies]
# Needed for ergonomic unit tests and doc tests
block-macros = { path = "../block-macros" }
