[package]
name = "block-traits"
version = "0.1.0"
edition = "2021"

[dependencies]
channels = { path = "../channels" }
weave = { path = "../weave" }
execution-context = { path = "../execution-context" }
serde = { version = "1.0", features = ["derive"] }
serialization = { path = "../serialization" }
serialization-macros = { path = "../serialization-macros" }
intents = { path = "../intents" }
trade-types = { path = "../trade-types" }

[dev-dependencies]
# Needed for ergonomic unit tests and doc tests
block-macros = { path = "../block-macros" }
