[package]
name = "block_traits"
version = "0.1.0"
edition = "2021"

[dependencies]
channels = { path = "../channels" }
serialization = { path = "../serialization" }
serialization-macros = { path = "../serialization-macros" }
intents = { path = "../intents" }

[dev-dependencies]
block-macros = { path = "../block-macros" }
serde = { version = "1.0", features = ["derive"] }
