[package]
name = "blocks"
version = "0.1.0"
edition = "2021"

[dependencies]
channels = { path = "../channels" }
block-macros = { path = "../block-macros" }
block_traits = { path = "../block_traits" }
serialization = { path = "../serialization" }
serialization-macros = { path = "../serialization-macros" }
trade_types = { path = "../trade-types" }
intents = { path = "../intents" }
weave = { path = "../weave" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"