[package]
name = "example-block"
version = "0.1.0"
edition = "2021"

[dependencies]
channels = { path = "../channels" }
block-macros = { path = "../block-macros" }
blocks = { path = "../blocks" }
block_traits = { path = "../block_traits" }
serialization = { path = "../serialization" }
serialization-macros = { path = "../serialization-macros" }
block-serialization = { path = "../block-serialization" }
serde = { version = "1.0", features = ["derive"] }
weave = { path = "../weave" }
intents = { path = "../intents" }

[dev-dependencies]