[package]
name = "weave-test"
version = "0.1.0"
edition = "2021"

[dependencies]
weave = { path = "../weave" }

[dev-dependencies]
channels = { path = "../channels" }
block-traits = { path = "../block-traits" }
blocks = { path = "../blocks" }
trade-types = { path = "../trade-types" }
serialization = { path = "../serialization" }
serialization-macros = { path = "../serialization-macros" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# prost = "0.12"  # For protobuf when needed

