[package]
name = "weave"
version = "0.1.0"
edition = "2021"

[dependencies]
channels = { path = "../channels" }
block-traits = { path = "../block-traits" }
serialization = { path = "../serialization" }
serialization-macros = { path = "../serialization-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# prost = "0.12"  # For protobuf when needed

[dev-dependencies]
blocks = { path = "../blocks" }
trade_types = { path = "../trade-types" }

