[package]
name = "block-traits"
version = "0.1.0"
edition = "2021"

[dependencies]
channels = { path = "../channels" }
weave = { path = "../weave" }
execution-context = { path = "../execution-context" }
serialization = { path = "../serialization" }
serialization-macros = { path = "../serialization-macros" }
trade-types = { path = "../trade-types" }

serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# Needed for ergonomic unit tests and doc tests
block-macros = { path = "../block-macros" }
