[package]
name = "weave-test"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
channels = { path = "../../crates/channels" }
block-traits = { path = "../../crates/block-traits" }
blocks = { path = "../../crates/blocks" }
trade-types = { path = "../../crates/trade-types" }
serialization = { path = "../../crates/serialization" }
serialization-macros = { path = "../../crates/serialization-macros" }
weave = { path = "../../crates/weave" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# prost = "0.12"  # For protobuf when needed

